<?xml version="1.0"?>
<package format="2">
  <name>rosdashboard</name>
  <version>0.0.0</version>
  <description>The rosdashboard package</description>

  <maintainer email="info@eufs.co">EUFS</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python_qt_binding</depend>
</package>
